# drinkwater

./: .env.example  .gitignore  .prettierignore  cliff.toml  docker-compose.yml
.github/workflows/: _backend-check.yml  _desktop-check.yml  _web-check.yml  backend-check.yml  backend.yml  cd-backend.yml  cd-desktop.yml  cd-tag.yml  cd-web.yml  ci-backend.yml  ci-desktop.yml  ci-prod.yml  ci-web.yml  desktop-ci.yml  desktop.yml  web.yml
.github/workflows/cd/: cd-backend.yml  cd-desktop.yml  cd-web.yml
.github/workflows/checks/: _web-check.yml
.github/workflows/ci/: ci-backend.yml  ci-desktop.yml  ci-web.yml
backend/: .dockerignore  .env.example  Dockerfile  docs.dev.md  go.mod  go.sum  main.go  sqlc.yaml
backend/api/: auth.go  common.go  dto.go  settings.go  water.go
backend/auth/: auth.go  code.go  jwt.go  middleware.go
backend/database/: database.go
backend/database/dbgen/: models.go  settings.sql.go  water_logs.sql.go
backend/email/: email.go
backend/handlers/: auth.go  errors.go  health.go  logs.go  response.go  settings.go  sync.go
backend/models/: models.gen.go
backend/scripts/: check.sh  db-migrate.sh  export-openapi.sh  export-swagger.sh
backend/sql/queries/: auth.sql  settings.sql  water_logs.sql
backend/sql/schema/: 20260604111452_water_log.sql  20260616052531_add_users_and_auth_codes.sql  20260621074517_add_user_settings.sql
deploy/: .env.example  .env.sops  README.md  deploy.sh  docker-compose.yml  reconcile-backend.sh  remote-deploy.sh  ssh-forced-command.sh
deploy/ansible/: README.md  ansible.cfg  deploy.yml  inventory.ini
deploy/ansible/templates/: env.j2
deploy/vector/: vector.yaml
docs/: architecture.md  release-desktop.md  release.md
shared-schemas/: openapi.json  openapi.yaml  swagger.json
web-desktop/: .env.example  .prettierignore  docs.dev.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
web-desktop/scripts/: bump-version.mjs
web-desktop/src/: App.tsx  autostart.ts  index.css  logger.ts  reminder.ts  schedule.ts  updater.ts  utils.ts  vite-env.d.ts
web-desktop/src-tauri/: .gitignore  Cargo.toml  rustfmt.toml  tauri.conf.json
web-desktop/src-tauri/capabilities/: default.json
web-desktop/src-tauri/src/: lib.rs  main.rs
web-desktop/src/components/: AccountSection.tsx  AppDialogs.tsx  AppLayout.tsx  BottleSection.tsx  ConfirmOverlay.tsx  DateNavigator.tsx  HistoryList.tsx  LogList.tsx  Navbar.tsx  ReminderSettings.tsx  ScheduleGoalBanner.tsx  ScheduleSettings.tsx  SettingsDrawer.tsx  SettingsSection.tsx  StatsRow.tsx  (+3 more)
(+48 files in other folders)
