[package]
name = "drinkwater"
version = "0.2.0"
description = "Drinkwater desktop shell — hosts the shared SolidJS web build in a Tauri WebView2 window."
authors = ["Ducktivity"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "drinkwater_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
# Auto-update: checks the GitHub Release feed, downloads the signed installer,
# and applies it. `process` provides the relaunch-after-update call.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
