[package]
name = "drinkwater"
version = "0.3.3"
description = "Drinkwater desktop shell — hosts the shared SolidJS web build in a Tauri WebView2 window."
authors = ["Ducktivity"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "drinkwater_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
# Auto-update: checks the GitHub Release feed, downloads the signed installer, and applies it. `process` provides the relaunch-after-update call.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
# Run-on-startup: registers/removes the OS login entry (Windows registry Run key) and lets the frontend toggle it. Launched with `--autostart` so we can start hidden in the tray on login rather than popping the window in the user's face.
tauri-plugin-autostart = "2"

# Windows-only: reach into the underlying WebView2 (Edge/Chromium) via its COM API to trim its memory when the app is hidden in the tray. Versions match Tauri's own webview2-com/windows bindings so the interface types unify into one instance.
[target.'cfg(windows)'.dependencies]
webview2-com = "0.38"
windows = "0.61"
